--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "eslint-plugin-react-hooks": "^4.0.8"
   },
   "scripts": {
-    "dev": "concurrently \"yarn start\" \"yarn server\"",
-    "start": "react-scripts start",
+    "dev": "concurrently \"yarn start\" \"json-server --watch db.json --port 4000\"",
+    "start": "yarn server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 4000"
+    "server": "node ./server.js"
   }
 }
