--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "dev": "concurrently \"yarn start\" \"json-server --watch db.json --port 4000\"",
-    "start": "yarn server",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
